Build Home with feeds

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -6,7 +6,7 @@
     {{> global-header}}
 
     <main class="content">
-      <div id="recent-articles" class="section">
+      <section id="recent-articles" class="section">
         <ol class="posts">
 
         {{#articles}}
@@ -18,10 +18,18 @@
 
         </ol>
 
-        <nav>
-          <p><a href="./blog/">→ 過去ログの閲覧</a></p>
-        </nav>
-      </div>
+        <footer>
+          <p><a href="./blog/">→ もっとウェブログ</a></p>
+        </footer>
+
+        <hr>
+
+        <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録ともう少しかっちりとした文書を、ウェブサイト制作およびプログラミング周りの話題を中心に書いています。</p>
+
+        <footer>
+          <p><a href="./about/">→ もっといろいろ</a></p>
+        </footer>
+      </section>
     </main>
 
     {{> site-search}}
