--- a/src/html/partial/link.mustache
+++ b/src/html/partial/link.mustache
@@ -4,7 +4,7 @@
 
 {{#home}}
   {{#articles}}
-    {{#first}}<link href="{{link}}" rel="prerender">{{/first}}
+    {{#isLatest}}<link href="{{link}}" rel="prerender">{{/isLatest}}
   {{/articles}}
 {{/home}}
 
