Don’t change layout on Home

--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,8 +1,8 @@
-<header class="global-header{{#home}} at-home{{/home}}">
-  {{#home}}<h1 class="logo at-home"><mark>{{site_title}}</mark></h1>{{/home}}
+<header class="global-header">
+  {{#home}}<h1 class="logo"><mark>{{site_title}}</mark></h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
-  <nav class="site-navigation{{#home}} at-home{{/home}}">
+  <nav class="site-navigation">
     <ul>
       {{#documents}}<li><mark>特集</mark></li>{{/documents}}
       {{^documents}}<li><a href="/documents/">特集</a></li>{{/documents}}
