Add tagline to Home
This tagline is also used at About.

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -6,29 +6,19 @@
     {{> global-header}}
 
     <main class="content">
-      <section id="recent-articles" class="section">
-        <ol class="posts">
-
-        {{#articles}}
-          <li>
-            <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
-            <a class="title" href="{{link}}">{{{title}}}</a>
-          </li>
-        {{/articles}}
-
-        </ol>
-
-        <footer>
-          <p><a href="./blog/">→ もっとウェブログ</a></p>
-        </footer>
+      <section class="section">
+        <h1 class="first-heading">ウェブサイト制作の話題を中心に、少しかっちりとした文書や翻訳の他、ウェブログとしてもいろいろ書いています</h1>
 
         <hr>
 
-        <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録ともう少しかっちりとした文書を、ウェブサイト制作およびプログラミング周りの話題を中心に書いています。</p>
-
-        <footer>
-          <p><a href="./about/">→ もっといろいろ</a></p>
-        </footer>
+        <ol class="posts">
+          {{#articles}}
+            <li>
+              <div class="info"><time class="date" datetime="{{html5PubDate}}">{{strPubDate}}</time></div>
+              <a class="title" href="{{link}}">{{{title}}}</a>
+            </li>
+          {{/articles}}
+        </ol>
       </section>
     </main>
 
