Spilt Sidenote widget into Note and Hang

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -19,6 +19,7 @@ $ratio-text-maximal: ($ratio-text-secondary * pow($ratio, 2));
 // Line Height
 $line-height: $ratio;
 $line-height-tiny: ($line-height * .8);
+$line-height-small: ($line-height * .9);
 
 
 // Core
