--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -59,6 +59,6 @@
 @import "widget/flat";
 @import "widget/float";
 @import "widget/hang";
+@import "widget/note";
 @import "widget/posts";
 @import "widget/seealso";
-@import "widget/sidenote";
