--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -62,7 +62,7 @@ $height-h1: rem($line-height-h1 * $ratio-text-h1);
 $margin-top-h1: $margin-gargantuan;
 
 $padding-left-blockquote: $width-gap;
-$width-border-blockquote: $width-border-large;
+$width-border-blockquote: $width-border;
 $margin-left-blockquote-content: (- ($padding-left-blockquote + $width-border-blockquote));
 
 $padding-left-list: $indent;
