--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -1,5 +1,5 @@
 // Sans-Serif
-$font-stack-sans-serif-local: -apple-system, "Segoe UI", sans-serif;
+$font-stack-sans-serif-local: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
 $font-stack-sans-serif: $font-stack-sans-serif-local;
 
 // Serif
