--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -297,16 +297,16 @@ form {
 
 :-ms-input-placeholder {
   color: inherit;
-  opacity: .54;
+  opacity: 0.54;
 }
 
 ::-webkit-input-placeholder {
   color: inherit;
-  opacity: .54;
+  opacity: 0.54;
 }
 
 :placeholder-shown {
-  opacity: .54;
+  opacity: 0.54;
 }
 
 
