--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -1,4 +1,4 @@
-/*!
+/**
  * debug.css
  *
  * Licensed under MIT: http://hail2u.mit-license.org/2011
@@ -21,28 +21,14 @@
   $c: rgb(255, 0, 255);
   $g: rgb(0, 255, 0);
 
-  background-image: linear-gradient(
-    to right,
-    $g 0,
-    $g 100%
-  ),
-  linear-gradient(
-    to right,
-    $g 0,
-    $g 100%
-  ),
-  linear-gradient(
-    to right,
-    $c 0,
-    $c 100%
-  );
+  background-image: linear-gradient(to right, $g 0, $g 100%), linear-gradient(to right, $g 0, $g 100%), linear-gradient(to right, $c 0, $c 100%);
   background-position: left center, right center, center;
   background-repeat: repeat-y;
-  background-size: ($width-gap-small * .75), ($width-gap-small * .75), 100%;
+  background-size: ($width-gap-small * 0.75), ($width-gap-small * 0.75), 100%;
   bottom: 0;
   content: "";
   left: 0;
-  opacity: .05;
+  opacity: 0.05;
   pointer-events: none;
   position: fixed;
   right: 0;
@@ -50,33 +36,13 @@
   z-index: 1;
 
   @media (min-width: $breakpoint-content) {
-    background-image: linear-gradient(
-      to right,
-      $g 0,
-      $g $width-gap-small,
-      $c $width-gap-small,
-      $c ($width-gap-small + $width-content),
-      $g ($width-gap-small + $width-content),
-      $g $width-content-outer
-    );
+    background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-content), $g ($width-gap-small + $width-content), $g $width-content-outer);
     background-position: center;
     background-size: $width-content-outer 1px;
   }
 
   @media (min-width: $breakpoint-full) {
-    background-image: linear-gradient(
-      to right,
-      $g 0,
-      $g $width-gap-small,
-      $c $width-gap-small,
-      $c ($width-gap-small + $width-supplement),
-      $g ($width-gap-small + $width-supplement),
-      $g ($width-gap-small + $width-supplement + $width-gap),
-      $c ($width-gap-small + $width-supplement + $width-gap),
-      $c ($width-gap-small + $width-full),
-      $g ($width-gap-small + $width-full),
-      $g $width-full-outer
-    );
+    background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement), $g ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-supplement + $width-gap), $c ($width-gap-small + $width-full), $g ($width-gap-small + $width-full), $g $width-full-outer);
     background-size: $width-full-outer 1px;
   }
 }
@@ -96,15 +62,15 @@ body::after {
   $c-f: rgb(255, 255, 255);
 
   background-color: $c-b;
-  bottom: .5rem;
+  bottom: 0.5rem;
   color: $c-f;
   content: "Small";
   display: block;
-  font-size: .875rem;
+  font-size: 0.875rem;
   line-height: 1;
-  padding: .25rem;
+  padding: 0.25rem;
   position: fixed;
-  right: .5rem;
+  right: 0.5rem;
 
   @media (min-width: $breakpoint-content) {
     content: "Medium: #{(($breakpoint-content / 1rem) * 16px)}";
