--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -1,4 +1,4 @@
-/*!
+/**
  * natural.css
  *
  * LICENSE: http://hail2u.mit-license.org/2011
@@ -67,7 +67,7 @@ hr {
 
 pre {
   background-color: darken($light, 3%);
-  font: #{($font-size * .875)}/1.25 $monospace;
+  font: #{($font-size * 0.875)}/1.25 $monospace;
   margin: ($font-size * 2) 0 0;
   overflow-wrap: break-word;
   padding: $font-size;
