--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -18,8 +18,8 @@ $ratio-text-maximal: ($ratio-text-secondary * pow($ratio, 2));
 
 // Line Height
 $line-height: $ratio;
-$line-height-tiny: ($line-height * .8);
-$line-height-small: ($line-height * .9);
+$line-height-tiny: ($line-height * 0.8);
+$line-height-small: ($line-height * 0.9);
 
 
 // Core
