Update environments and tools

--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -42,10 +42,12 @@
 
           <ul class="flat">
             <li><a href="http://blosxom.sourceforge.net/">Blosxom</a></li>
+            <li><a href="https://developers.google.com/closure/compiler/">Closure Compiler</a></li>
             <li><a href="https://github.com/hail2u/node-css-mqpacker">CSS MQPacker</a></li>
             <li><a href="https://github.com/hail2u/node-csswring">CSSWring</a></li>
             <li><a href="http://git-scm.com/">Git</a></li>
             <li><a href="https://github.com/janl/mustache.js">mustache</a></li>
+            <li><a href="https://github.com/kangax/html-minifier">HTML Minifier</a></li>
             <li><a href="http://www.imagemagick.org/">ImageMagick</a></li>
             <li><a href="http://inkscape.org/">Inkscape</a></li>
             <li><a href="http://jpegclub.org/jpegtran/">jpegtran</a></li>
@@ -56,7 +58,6 @@
             <li><a href="https://pngquant.org/">pngquant</a></li>
             <li><a href="http://sass-lang.com/">Sass</a></li>
             <li><a href="https://github.com/svg/svgo">SVGO</a></li>
-            <li><a href="http://lisperator.net/uglifyjs/">UglifyJS</a></li>
             <li><a href="http://www.vim.org/">Vim</a></li>
           </ul>
         </section>
@@ -69,6 +70,16 @@
             <li><a href="https://gist.github.com/hail2u/c86ee1467cd132b1c011">ellipsis-title.js</a></li>
             <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
             <li><a href="https://gist.github.com/hail2u/c0d669fb8473bc9c80232be40d8d5e7f">wrapfix.js</a></li>
+          </ul>
+        </section>
+
+        <section>
+          <h1 class="subheading">利用しているサービス</h1>
+
+          <ul class="flat">
+            <li><a href="https://www.cloudflare.com/">CloudFlare</a></li>
+            <li><a href="https://www.gandi.net">Gandi</a></li>
+            <li><a href="https://www.github.com/">GitHub</a></li>
           </ul>
         </section>
 
