Align Footlinks left

--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -8,6 +8,9 @@
   margin-top: $margin;
 
   @media (min-width: $breakpoint-full) {
+    flex-grow: 0;
     margin-left: (- ($width-supplement + $width-gap));
+    margin-right: $width-gap;
+    width: $width-supplement;
   }
 }
