--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,9 +7,11 @@
 
     <main class="content">
       <section class="section">
-        <h1 class="first-heading">ウェブサイト制作の話題を中心に、少しかっちりとした文書や翻訳の他、ウェブログとしてもいろいろ書いています</h1>
+        <p class="first-heading">ウェブサイト制作の話題を中心に、少しかっちりとした文書や翻訳の他、ウェブログとしてもいろいろあります。ながしまきょうが書いています。</p>
+      </section>
 
-        <hr>
+      <section class="section">
+        <h1>最近書いた記事</h1>
 
         <ol class="posts">
           {{#articles}}
@@ -19,6 +21,13 @@
             </li>
           {{/articles}}
         </ol>
+      </section>
+
+      <section class="section">
+        <h1>ここ以外だと……</h1>
+
+        <p>ちょっとしたことは<a href="https://twitter.com/hail2u_">Twitter</a>、スマホで撮った写真は<a href="https://instagram.com/hail2u_">Instagram</a>、プログラムとかは<a href="https://github.com/hail2u">GitHub</a>、買ったものやら読んだ本やらは<a href="https://www.pinterest.com/hail2u/">Pinterest</a>、気になったウェブページは<a href="https://pinboard.in/u:hail2u/">Pinboard</a>でやってます。</p>
+        </ul>
       </section>
     </main>
 
