Don’t restrict to heading

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,7 +39,7 @@
 @import "content";
 @import "content/section";
 @import "content/section-footer";
-@import "content/first-heading";
+@import "content/first";
 @import "content/subheading";
 
 
