--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content">
       <section class="section">
-        <p class="first-heading">ウェブサイト制作の話題を中心に、少しかっちりとした文書や翻訳の他、ウェブログとしてもいろいろあります。ながしまきょうが書いています。</p>
+        <p class="first">ウェブサイト制作の話題を中心に、少しかっちりとした文書や翻訳の他、ウェブログとしてもいろいろあります。ながしまきょうが書いています。</p>
       </section>
 
       <section class="section">
