Define First as general widget
This widget now can be used in Global Header.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -39,7 +39,6 @@
 @import "content";
 @import "content/section";
 @import "content/section-footer";
-@import "content/first";
 @import "content/subheading";
 
 
@@ -56,6 +55,7 @@
 
 // Widget
 @import "widget/fill";
+@import "widget/first";
 @import "widget/flat";
 @import "widget/float";
 @import "widget/hang";
