--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,6 +7,10 @@
 
     <main class="content">
       <section class="section">
+        <p class="first">{{description}}</p>
+      </section>
+
+      <section class="section">
         <h1>最近書いた記事</h1>
 
         <ol class="posts">
