Add Pick widget

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -60,5 +60,6 @@
 @import "widget/float";
 @import "widget/hang";
 @import "widget/note";
+@import "widget/pick";
 @import "widget/posts";
 @import "widget/seealso";
