Add latest document to Home

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -23,6 +23,20 @@
         </ol>
       </section>
 
+      <section class="section pick fill">
+        {{#features}}
+          {{#isLatest}}
+            <a href="{{link}}">
+              <h1>{{title}}</h1>
+
+              <footer>
+                <p><time datetime="{{html5PubDate}}">{{strPubDate}}</time></p>
+              </footer>
+            </a>
+          {{/isLatest}}
+        {{/features}}
+      </section>
+
       <section class="section">
         <h1>ここ以外だと……</h1>
 
