Use primary color for Pick background

--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -7,19 +7,19 @@
   $r: $ratio-text-enormous;
   $m: rem($line-height-h1 * $r / $ratio-text-h1 * 3);
 
-  background-color: $color-dark;
+  background-color: $color-primary-light;
   margin-top: $margin-top-h1;
   padding: $padding-small;
   text-align: center;
 
   a {
     border: $width-border-small solid;
-    color: $color-light-dark;
+    color: $color-light;
     display: block;
   }
 
   h1 {
-    color: $color-light;
+    color: inherit;
     font-size: rem($r);
     margin: $m 10%;
   }
