--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -5,7 +5,8 @@
   @extend %white-spaces;
 
   $r: $ratio-text-enormous;
-  $m: rem($line-height-h1 * $r / $ratio-text-h1 * 3);
+  $h: rem($line-height-h1 * $r / $ratio-text-h1);
+  $m: ($h * 2);
 
   background-color: $color-primary-light;
   margin-top: $margin-top-h1;
@@ -28,5 +29,31 @@
     position: absolute;
     top: ($m - rem($line-height-root));
     width: 100%;
+  }
+
+  @media (min-width: $breakpoint-content) {
+    $m: ($h * 3);
+
+    h1 {
+      margin-bottom: $m;
+      margin-top: $m;
+    }
+
+    footer {
+      top: ($m - rem($line-height-root));
+    }
+  }
+
+  @media (min-width: $breakpoint-full) {
+    $m: ($h * 4);
+
+    h1 {
+      margin-bottom: $m;
+      margin-top: $m;
+    }
+
+    footer {
+      top: ($m - rem($line-height-root));
+    }
   }
 }
