Place Byline after Footlinks

--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -3,9 +3,12 @@
   @extend %positioning-root;
 
   color: $color-dark-light;
-  flex-grow: 1;
   font-weight: bolder;
-  margin-top: $margin;
+
+  @media (min-width: $breakpoint-content) {
+    flex-grow: 1;
+    order: -1;
+  }
 
   @media (min-width: $breakpoint-full) {
     flex-grow: 0;
