--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -46,7 +46,7 @@
   @media (min-width: $breakpoint-content) {
     position: absolute;
     right: $width-gap-small;
-    top: ((rem($line-height-root * $ratio-text-global-footer) - $height-site-search-query) / 2 + $margin);
+    top: ((rem($line-height-root * $ratio-text-global-footer) - $height-site-search-query) / 2);
     width: $width-supplement;
     z-index: 1;
   }
