--- a/src/css/_global-footer.scss
+++ b/src/css/_global-footer.scss
@@ -4,7 +4,10 @@
   @extend %indistinguishable-link;
   @extend %positioning-root;
 
-  display: flex;
   font-size: rem($ratio-text-global-footer);
   margin-bottom: ($margin-large - $margin);
+
+  @media (min-width: $breakpoint-content) {
+    display: flex;
+  }
 }
