--- a/src/html/partial/global-footer.mustache
+++ b/src/html/partial/global-footer.mustache
@@ -1,5 +1,5 @@
 <footer class="global-footer">
-  <p class="byline"><a href="https://kyonagashima.com/" rel="author">KN</a></p>
-
   <p class="footlinks"><a href="{{license_url}}" rel="license">CC BY-NC</a> • <a href="{{feed_url}}" rel="alternate">RSS</a></p>
+
+  <p class="byline"><a href="https://kyonagashima.com/" rel="author">ながしまきょう</a>が作っています</p>
 </footer>
