Reduce Footlinks bottom white spaces

--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -1,6 +1,7 @@
 // Footlinks
 .footlinks {
   color: $color-dark-light;
+  margin-bottom: $margin-minimal;
 
   @media (min-width: $breakpoint-content) {
     margin-right: ($width-gap + $width-supplement);
