Only bold hyperlinks in Byline

--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -2,8 +2,9 @@
 .byline {
   @extend %positioning-root;
 
-  color: $color-dark-light;
-  font-weight: bolder;
+  a {
+    font-weight: bolder;
+  }
 
   @media (min-width: $breakpoint-content) {
     flex-grow: 1;
