Update font stack

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -97,7 +97,7 @@ body::after {
 
 // Fonts
 .font-family-body {
-  font-family: $font-stack-sans-serif;
+  font-family: $font-stack-system-ui;
 }
 
 .font-family-pre {
