--- a/src/css/var/_font.scss
+++ b/src/css/var/_font.scss
@@ -1,5 +1,9 @@
-// Sans-Serif
-$font-stack-sans-serif-local: system, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+// System UI
+$font-stack-system-ui-local: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+$font-stack-system-ui: $font-stack-system-ui-local;
+
+// Sans Serif
+$font-stack-sans-serif-local: "Helvetica Neue", "Calibri", sans-serif;
 $font-stack-sans-serif: $font-stack-sans-serif-local;
 
 // Serif
