--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -1,6 +1,6 @@
 // Root
 :root {
-  font-family: $font-stack-sans-serif;
+  font-family: $font-stack-system-ui;
   font-feature-settings: "kern" 1, "lnum" 1, "pnum" 1;
   font-size: percentage($ratio-text-root);
   line-height: $line-height-root;
