Skip underline on descender

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -176,6 +176,8 @@ main {
 // Text-level Semantics
 a {
   color: $color-primary;
+  -webkit-text-decoration-skip: ink;
+  text-decoration-skip: ink;
 }
 
 em {
