--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -78,6 +78,7 @@
 
           <ul class="flat">
             <li><a href="https://www.cloudflare.com/">CloudFlare</a></li>
+            <li><a href="https://duckduckgo.com/">DuckDuckGo</a></li>
             <li><a href="https://www.gandi.net/">Gandi</a></li>
             <li><a href="https://www.github.com/">GitHub</a></li>
           </ul>
