--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -21,6 +21,14 @@
         <h1 class="first">$title</h1>
 
         $body
+
+        <aside class="share">
+          <ul>
+            <li><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&amp;url=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>&via=hail2u_">Twitter</a></li>
+            <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>">Facebook</a></li>
+            <li><a class="hatena" href="http://b.hatena.ne.jp/add?title=<@uri.encode output="Yes">$title</@uri.encode>&amp;url=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>">はてなブックマーク</a></li>
+          </ul>
+        </aside>
       </article>
 
 <!-- blosxom foot -->
