--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -6,9 +6,9 @@
     {{> global-header}}
 
     <main class="content">
-      <section class="section">
+      <div class="section">
         <p class="first">{{description}}</p>
-      </section>
+      </div>
 
       <section class="section">
         <h1>最近書いた記事</h1>
