Generate base text ratio based on regular text ratios

--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -24,8 +24,8 @@ $line-height-small: ($line-height * 0.9);
 
 // Core
 $ratio-text-root: $ratio-text;
-$ratio-text-root-content: (1.1 * $ratio-text);
-$ratio-text-root-full: (1.2 * $ratio-text);
+$ratio-text-root-content: ($ratio-text + (($ratio-text-large - $ratio-text) / 3));
+$ratio-text-root-full: ($ratio-text + (($ratio-text-large - $ratio-text) / 3 * 2));
 $line-height-root: $line-height;
 
 $ratio-text-h1: $ratio-text-huge;
