Remove unused variables

--- a/src/css/class/_protrusion.scss
+++ b/src/css/class/_protrusion.scss
@@ -4,7 +4,7 @@
     margin-right: $width-gap;
     position: absolute;
     right: 100%;
-    width: $width-protrusion-full;
+    width: $width-supplement;
     z-index: 1;
   }
 }
