--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -5,18 +5,18 @@
   @extend %positioning-root;
 
   display: flex;
-  font-size: rem($ratio-text-global-header);
+  font-size: rem($ratio-text-small);
   line-height: 1;
-  margin-top: $margin-top-global-header;
+  margin-top: $margin;
   text-transform: uppercase;
 
   @media (min-width: $breakpoint-content) {
-    font-size: rem($ratio-text-global-header-content);
-    margin-top: $margin-top-global-header-content;
+    font-size: rem($ratio-text);
+    margin-top: $margin-large;
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-top-global-header-full;
+    margin-top: $margin-huge;
     max-width: $width-full;
     padding-left: $width-gap-small;
   }
