Add Tagline widget

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -5,11 +5,10 @@
   @extend %positioning-root;
 
   display: flex;
-  font-size: rem($ratio-text-small);
+  flex-wrap: wrap;
   margin-top: $margin;
 
   @media (min-width: $breakpoint-content) {
-    font-size: rem($ratio-text);
     margin-top: $margin-large;
   }
 
