--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -2,7 +2,7 @@
 .logo {
   color: $color-dark-light;
   flex: auto;
-  font-size: inherit;
+  font-size: rem($ratio-text-logo);
   font-weight: bolder;
   line-height: inherit;
   margin-bottom: 0;
@@ -15,6 +15,10 @@
 
   mark {
     background-color: transparent;
+  }
+
+  @media (min-width: $breakpoint-content) {
+    font-size: rem($ratio-text-logo-content);
   }
 
   @media (min-width: $breakpoint-full) {
