--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -29,6 +29,7 @@
 @import "global-header";
 @import "global-header/logo";
 @import "global-header/site-navigation";
+@import "global-header/tagline";
 
 // Content
 @import "content";
