--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -8,6 +8,7 @@
 
   li {
     display: block;
+    font-size: rem($ratio-text-logo);
     margin-left: $width-gap-small;
   }
 
@@ -22,6 +23,7 @@
 
   @media (min-width: $breakpoint-content) {
     li {
+      font-size: rem($ratio-text-logo-content);
       margin-left: $width-gap;
     }
   }
