--- a/src/css/var/_ratio.scss
+++ b/src/css/var/_ratio.scss
@@ -28,6 +28,10 @@ $line-height-root: $line-height;
 $ratio-text-h1: $ratio-text-huge;
 $line-height-h1: $line-height-tiny;
 
+// Global Header
+$ratio-text-logo: $ratio-text-small;
+$ratio-text-logo-content: $ratio-text;
+
 // Content
 $ratio-text-section-footer: $ratio-text;
 
