--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -17,4 +17,6 @@
       {{^about}}<li><a href="/about/">いろいろ</a></li>{{/about}}
     </ul>
   </nav>
+
+  {{#home}}<p class="tagline first">{{description}}</p>{{/home}}
 </header>
