--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -9,7 +9,7 @@
       <section id="website" class="section">
         <h1 class="first">{{short_title}}</h1>
 
-        <p>Hail2u.netは、ドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録ともう少しかっちりとした文書を、ウェブサイト制作の話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
+        <p>このウェブサイトはドメインの取得こそ2003年くらいですが、そこそこ息の長いウェブサイトで、20世紀からあります。いわゆるウェブログと呼ばれるような記録ともう少しかっちりとした文書を、ウェブサイト制作の話題を中心に書いています。日本最後の<a href="http://blosxom.sourceforge.net/">Blosxom</a>を利用したウェブサイトの座が目標ですが、挫折しそうです。</p>
 
         <p>時々長期にわたって更新が止まりますが、そういう時はほぼ何かしらのゲームにはまってる時です。</p>
 
