Remove Tagline bottom white spaces
Margin collapsing does not work on Flexbox.

--- a/src/css/global-header/_tagline.scss
+++ b/src/css/global-header/_tagline.scss
@@ -1,5 +1,7 @@
 // Tagline
 .tagline {
+  margin-bottom: 0;
+
   @media (min-width: $breakpoint-full) {
     margin-left: ($width-supplement + $width-gap);
   }
