Define First top white spaces based on Global Header

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -6,14 +6,14 @@
 
   display: flex;
   flex-wrap: wrap;
-  margin-top: $margin;
+  margin-top: $margin-top-global-header;
 
   @media (min-width: $breakpoint-content) {
-    margin-top: $margin-large;
+    margin-top: $margin-top-global-header-content;
   }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-huge;
+    margin-top: $margin-top-global-header-full;
     max-width: $width-full;
     padding-left: $width-gap-small;
   }
