--- a/src/css/widget/_first.scss
+++ b/src/css/widget/_first.scss
@@ -1,4 +1,12 @@
 // First
 .first {
-  margin-top: $margin-huge;
+  margin-top: $margin-top-global-header;
+
+  @media (min-width: $breakpoint-content) {
+    margin-top: $margin-top-global-header-content;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin-top-global-header-full;
+  }
 }
