Add label to Share

--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -2,16 +2,26 @@
 .share {
   @extend %indistinguishable-link;
 
+  $m: $margin-tiny;
+
   ul {
     display: flex;
+    flex-wrap: wrap;
     font-size: rem($ratio-text-small);
     margin-top: $margin-large;
     padding-left: 0;
+
+    &::before {
+      content: "共有する:";
+      display: block;
+      margin-right: $m;
+      width: 100%;
+    }
   }
 
   li {
     display: block;
-    margin-right: $margin-tiny;
+    margin-right: $m;
   }
 
   .twitter {
@@ -24,5 +34,11 @@
 
   .hatena {
     color: rgb(0, 164, 222);
+  }
+
+  @media (min-width: $breakpoint-content) {
+    ul::before {
+      width: auto;
+    }
   }
 }
