--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -2,43 +2,47 @@
 .share {
   @extend %indistinguishable-link;
 
-  $m: $margin-tiny;
+  $c: $color-dark;
 
   ul {
     display: flex;
-    flex-wrap: wrap;
-    font-size: rem($ratio-text-small);
     margin-top: $margin-large;
     padding-left: 0;
-
-    &::before {
-      content: "共有する:";
-      display: block;
-      margin-right: $m;
-      width: 100%;
-    }
   }
 
   li {
     display: block;
-    margin-right: $m;
+    margin-right: $margin-tiny;
   }
 
-  .twitter {
-    color: rgb(85, 172, 238);
-  }
+  a {
+    $w: rem($ratio-text-large);
 
-  .facebook {
-    color: rgb(59, 89, 153);
-  }
+    display: block;
+    height: $w;
+    overflow: hidden;
+    width: $w;
 
-  .hatena {
-    color: rgb(0, 164, 222);
-  }
-
-  @media (min-width: $breakpoint-content) {
-    ul::before {
-      width: auto;
+    &::before {
+      background-position: left center;
+      background-repeat: no-repeat;
+      background-size: 100%;
+      content: "";
+      display: block;
+      height: 100%;
+      width: 100%;
     }
+  }
+
+  .twitter::before {
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M448%20136.906c-14.128%206.267-29.313%2010.5-45.247%2012.405%2016.263-9.75%2028.756-25.188%2034.639-43.586a157.708%20157.708%200%200%201-50.03%2019.118c-14.369-15.312-34.844-24.878-57.504-24.878-43.507%200-78.783%2035.273-78.783%2078.78%200%206.175.697%2012.188%202.04%2017.954-65.475-3.285-123.526-34.65-162.382-82.314-6.782%2011.635-10.667%2025.169-10.667%2039.607%200%2027.333%2013.908%2051.447%2035.049%2065.574a78.467%2078.467%200%200%201-35.684-9.853c-.007.328-.007.656-.007.99%200%2038.17%2027.156%2070.01%2063.196%2077.25a78.897%2078.897%200%200%201-35.578%201.35c10.025%2031.298%2039.12%2054.077%2073.594%2054.71-26.962%2021.132-60.931%2033.726-97.843%2033.726-6.359%200-12.63-.374-18.793-1.101%2034.865%2022.352%2076.276%2035.397%20120.766%2035.397%20144.908%200%20224.152-120.046%20224.152-224.155%200-3.415-.078-6.812-.23-10.191%2015.395-11.11%2028.75-24.983%2039.312-40.783%22%20fill%3D%22#{encode-color($c)}%22%2F%3E%3C%2Fsvg%3E");
+  }
+
+  .facebook::before {
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M350.912%2071.615c-10.38-2.22-20.215-4.034-29.507-5.44-9.292-1.404-19.4-2.13-30.323-2.175-31.819.136-54.799%207.48-68.94%2022.028-14.142%2014.55-21.077%2035.49-20.805%2062.822v39.705h-40.25v64.182h40.25V448h78.323V252.737h57.11l5.44-64.182h-62.55v-31.003c-.453-8.793.861-15.682%203.943-20.668%203.082-4.986%2010.652-7.524%2022.709-7.615%204.815.023%2010.413.386%2016.793%201.088%206.38.703%2012.385%201.61%2018.017%202.72z%22%20fill%3D%22#{encode-color($c)}%22%2F%3E%3C%2Fsvg%3E");
+  }
+
+  .hatena::before {
+    background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22512%22%20height%3D%22512%22%20viewBox%3D%220%200%20512%20512%22%3E%3Cpath%20d%3D%22M64%2096v320h148c40%200%2080-12%2096-48%2020-36%2012-92-24-116-12-8-24-12-36-16%2028-4%2052-24%2052-52%204-28-4-64-32-76-32-12-76-12-108-12H64zm300%200v212h80V96h-80zm-220%2060s44%200%2056%204c24%208%2024%2048-4%2052-8%204-52%204-52%204v-60zm0%20124s44%200%2064%204c24%204%2032%2028%2020%2048-8%2016-24%2016-40%2016h-44v-68zm260%2048a44%2044%200%200%200-44%2044%2044%2044%200%200%200%2044%2044%2044%2044%200%200%200%2044-44%2044%2044%200%200%200-44-44z%22%20fill%3D%22#{encode-color($c)}%22%2F%3E%3C%2Fsvg%3E");
   }
 }
