Convert First to placeholder class Top White Spaces

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -3,17 +3,12 @@
   @extend %centering;
   @extend %indistinguishable-link;
   @extend %positioning-root;
+  @extend %top-white-spaces;
 
   display: flex;
   flex-wrap: wrap;
-  margin-top: $margin-top-global-header;
-
-  @media (min-width: $breakpoint-content) {
-    margin-top: $margin-top-global-header-content;
-  }
 
   @media (min-width: $breakpoint-full) {
-    margin-top: $margin-top-global-header-full;
     max-width: $width-full;
     padding-left: $width-gap-small;
   }
