--- a/src/css/class/_white-spaces.scss
+++ b/src/css/class/_white-spaces.scss
@@ -2,3 +2,16 @@
 %white-spaces {
   margin: 0 0 $margin;
 }
+
+// Top White Spaces
+%top-white-spaces {
+  margin-top: $margin;
+
+  @media (min-width: $breakpoint-content) {
+    margin-top: $margin-large;
+  }
+
+  @media (min-width: $breakpoint-full) {
+    margin-top: $margin-huge;
+  }
+}
