--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -35,6 +35,7 @@
 @import "content";
 @import "content/section";
 @import "content/section-footer";
+@import "content/first-heading";
 @import "content/subheading";
 
 // Subcontent
@@ -48,7 +49,6 @@
 
 // Widget
 @import "widget/fill";
-@import "widget/first";
 @import "widget/flat";
 @import "widget/float";
 @import "widget/hang";
