--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -25,7 +25,7 @@ $padding-huge: ($padding * 3);
 $padding-gargantuan: ($padding * 4);
 
 // Column
-$column: rem(pow($line-height, 7));
+$column: 36rem;
 $column-gap: rem($line-height);
 
 // Main Component
@@ -35,7 +35,7 @@ $width-gap-small: ($width-gap / 2);
 $width-content: $column;
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
 
-$width-supplement: ($width-content / pow($ratio, 2));
+$width-supplement: ($width-content / 2);
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
 
 $width-full: ($width-supplement + $width-gap + $width-content);
