Generate Site Search query width based on content width

--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -4,6 +4,6 @@
   margin-bottom: $margin-minimal;
 
   @media (min-width: $breakpoint-content) {
-    margin-right: ($width-gap + $width-supplement);
+    margin-right: ($width-gap + $width-site-search-query-content);
   }
 }
