--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -45,7 +45,7 @@
     position: absolute;
     right: $width-gap-small;
     top: ((rem($line-height-root * $ratio-text-global-footer) - $height-site-search-query) / 2);
-    width: $width-supplement;
+    width: $width-site-search-query-content;
     z-index: 1;
   }
 }
