--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -60,3 +60,4 @@ $width-border-table: $width-border-small;
 // Subcontent
 $width-border-site-search-query: $width-border-small;
 $height-site-search-query: (1rem + ($width-border-site-search-query + $padding-large) * 2);
+$width-site-search-query-content: ($width-content / pow($ratio, 2));
