--- a/src/html/about/index.mustache
+++ b/src/html/about/index.mustache
@@ -68,6 +68,7 @@
           <ul class="flat">
             <li><a href="https://github.com/hail2u/abbread">Abbread</a></li>
             <li><a href="https://gist.github.com/hail2u/c86ee1467cd132b1c011">ellipsis-title.js</a></li>
+            <li><a href="https://gist.github.com/hail2u/8d96d6ed7fc5995f6e7c292dfef1fe6c">reldate.js</a></li>
             <li><a href="https://github.com/hail2u/unutm">UnUTM</a></li>
             <li><a href="https://gist.github.com/hail2u/c0d669fb8473bc9c80232be40d8d5e7f">wrapfix.js</a></li>
           </ul>
