--- a/src/html/partial/script.mustache
+++ b/src/html/partial/script.mustache
@@ -1,4 +1,5 @@
 <script async src="/scripts/abbread.min.js"></script>
 <script async src="/scripts/unutm.min.js"></script>
 <script defer src="/scripts/ellipsis-title.min.js"></script>
+<script defer src="/scripts/reldate.min.js"></script>
 <script defer src="/scripts/wrapfix.min.js"></script>
