Fix class names

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -18,7 +18,7 @@
           <p><time class="date" datetime="$yr-$mo_num-$da<?$fn>T</?>$ti<?$fn>:</?>00+09:00">$yr/$mo_num/$da</time></p>
         </footer>
 
-        <h1 class="first">$title</h1>
+        <h1 class="first-heading">$title</h1>
 
         $body
 
