--- a/src/html/documents/index.mustache
+++ b/src/html/documents/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content">
       <section id="on-2015" class="section">
-        <h1 class="first"><time>2015</time></h1>
+        <h1 class="first-heading"><time>2015</time></h1>
 
         <ol class="posts">
           <li><a class="title" href="/documents/democratic-design.html">民主的なデザイン</a></li>
