--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -7,7 +7,7 @@
 
     <main class="content">
       <section class="section">
-        <h1 class="first">最近書いた記事</h1>
+        <h1 class="first-heading">最近書いた記事</h1>
 
         <ol class="posts">
           {{#articles}}
