--- a/src/html/blog/index.mustache
+++ b/src/html/blog/index.mustache
@@ -9,7 +9,7 @@
       {{#articles}}
         {{#isFirstInYear}}
           <section id="on-{{year}}" class="section">
-            <h1 class="first"><time>{{year}}</time></h1>
+            <h1 class="first-heading"><time>{{year}}</time></h1>
 
             <ol class="posts">
         {{/isFirstInYear}}
