Generate text size if > full HD

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -12,6 +12,10 @@
   @media (min-width: $breakpoint-full) {
     font-size: percentage($ratio-text-root-full);
   }
+
+  @media (min-width: 1921px) and (min-height: 1081px) {
+    font-size: 1vw;
+  }
 }
 
 // Sections
