Include gutter for calculating column width

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -35,7 +35,7 @@ $width-gap-small: ($width-gap / 2);
 $width-content: $column;
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
 
-$width-supplement: ($width-content / $ratio);
+$width-supplement: ($width-content-outer / $ratio - $width-gap-small - $width-gap-small);
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
 
 $width-full: ($width-supplement + $width-gap + $width-content);
