Layout Global Header with negative margin

--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -23,6 +23,7 @@
 
   @media (min-width: $breakpoint-full) {
     flex: initial;
+    margin-left: (- ($width-supplement + $width-gap));
     width: $width-supplement;
   }
 }
