Revert "Reduce blockquote border impact"
This reverts commit 5ca8a4ef0ba2873354bbc57cc7a732456afdf5e9.

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -50,7 +50,7 @@ $breakpoint-full: (($width-gap + $width-full-outer + $width-gap) * $ratio-text-r
 $margin-top-h1: $margin-gargantuan;
 
 $padding-left-blockquote: $width-gap;
-$width-border-blockquote: $width-border;
+$width-border-blockquote: $width-border-large;
 $margin-left-blockquote-content: (- ($padding-left-blockquote + $width-border-blockquote));
 
 $padding-left-list: $indent;
