Add Google+ button to Share

--- a/src/html/blog/theme.mustache
+++ b/src/html/blog/theme.mustache
@@ -26,6 +26,7 @@
           <ul>
             <li><a class="twitter" href="https://twitter.com/intent/tweet?text=<@uri.encode output="Yes">$title</@uri.encode>&amp;url=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>&amp;via=hail2u_">Twitter</a></li>
             <li><a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>">Facebook</a></li>
+            <li><a class="google" href="https://plus.google.com/share?url=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>">Google+</a></li>
             <li><a class="hatena" href="http://b.hatena.ne.jp/add?title=<@uri.encode output="Yes">$title</@uri.encode>&amp;url=<@uri.encode output="Yes">{{scheme}}//{{domain}}$uri::canonical</@uri.encode>">はてなブックマーク</a></li>
           </ul>
         </aside>
