Mark active Global Header item with triangle

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -7,4 +7,19 @@
 
   display: flex;
   flex-wrap: wrap;
+
+  mark {
+    @extend %positioning-root;
+
+    &::before {
+      bottom: 100%;
+      color: $color-primary;
+      content: "▾";
+      display: block;
+      line-height: 1;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+    }
+  }
 }
