--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -13,7 +13,7 @@
 
     &::before {
       bottom: 100%;
-      color: $color-primary;
+      color: $color-fg-a;
       content: "▾";
       display: block;
       line-height: 1;
