--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -23,4 +23,6 @@ $color-secondary-dark: rgb(255, 123, 0);
 // Core
 $color-border-blockquote: $color-light-dark;
 
+$color-fg-a: $color-primary;
+
 $color-border-table: $color-light-dark;
