Place Global Header marker just above its label

--- a/src/css/_global-header.scss
+++ b/src/css/_global-header.scss
@@ -12,7 +12,7 @@
     @extend %positioning-root;
 
     &::before {
-      bottom: 100%;
+      bottom: ((($line-height-root - 1) / 2 + 1) / $line-height-root * 100%);
       color: $color-fg-a;
       content: "▾";
       display: block;
