Define column preview correctly

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -33,7 +33,7 @@
   top: 0;
   z-index: 1;
 
-  @media (min-width: $breakpoint-content) {
+  @media (min-width: $width-content-outer) {
     background-image: linear-gradient(to right, $g 0, $g $width-gap-small, $c $width-gap-small, $c ($width-gap-small + $width-content), $g ($width-gap-small + $width-content), $g $width-content-outer);
     background-position: center;
     background-size: $width-content-outer 1px;
