Keep outer margin slightly larger

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -32,6 +32,8 @@ $column-gap: rem($line-height);
 $width-gap: $column-gap;
 $width-gap-small: ($width-gap / 2);
 
+$width-blank: ($column / pow($ratio, 3));
+
 $width-content: $column;
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
 
@@ -43,8 +45,8 @@ $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
 
 // Breakpoint
 $width-scrollbar: 2rem;
-$breakpoint-content: (($width-gap + $width-content-outer + $width-gap) * $ratio-text-root-content / $ratio-text-root + $width-scrollbar);
-$breakpoint-full: (($width-gap + $width-full-outer + $width-gap) * $ratio-text-root-full / $ratio-text-root + $width-scrollbar);
+$breakpoint-content: (($width-blank + $width-content-outer + $width-blank) * $ratio-text-root-content / $ratio-text-root + $width-scrollbar);
+$breakpoint-full: (($width-blank + $width-full-outer + $width-blank) * $ratio-text-root-full / $ratio-text-root + $width-scrollbar);
 
 // Core
 $margin-top-h1: $margin-gargantuan;
