--- a/src/html/partial/global-header.mustache
+++ b/src/html/partial/global-header.mustache
@@ -1,5 +1,5 @@
 <header class="global-header">
-  {{#home}}<h1 class="logo"><mark>{{site_title}}</mark></h1>{{/home}}
+  {{#home}}<h1 class="logo">{{site_title}}</h1>{{/home}}
   {{^home}}<h1 class="logo"><a href="/">{{site_title}}</a></h1>{{/home}}
 
   <nav class="site-navigation">
