Only mark Site Navigation active item

--- a/src/css/global-header/_site-navigation.scss
+++ b/src/css/global-header/_site-navigation.scss
@@ -17,7 +17,20 @@
   }
 
   mark {
+    @extend %positioning-root;
+
     background-color: transparent;
+
+    &::before {
+      bottom: ((($line-height-root - 1) / 2 + 1) / $line-height-root * 100%);
+      color: $color-fg-a;
+      content: "▾";
+      display: block;
+      line-height: 1;
+      position: absolute;
+      text-align: center;
+      width: 100%;
+    }
   }
 
   @media (min-width: $breakpoint-content) {
