--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -178,7 +178,7 @@ main {
 
 // Text-level Semantics
 a {
-  color: $color-fg-a;
+  color: $color-primary;
   -webkit-text-decoration-skip: ink;
   text-decoration-skip: ink;
 }
