--- a/src/css/widget/_share.scss
+++ b/src/css/widget/_share.scss
@@ -24,7 +24,7 @@
     width: $w;
 
     &::before {
-      background-position: left center;
+      background-position: center;
       background-repeat: no-repeat;
       background-size: 100%;
       content: "";
