Use numeric weight

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -29,7 +29,7 @@ h1 {
   @extend %indistinguishable-link;
 
   font-size: rem($ratio-text-h1);
-  font-weight: normal;
+  font-weight: 400;
   line-height: $line-height-h1;
   margin: $margin-top-h1 0 $margin;
 }
@@ -125,7 +125,7 @@ dl {
 
 dt {
   color: $color-dark-light;
-  font-weight: bolder;
+  font-weight: 700;
   margin-bottom: $margin-tiny;
 }
 
@@ -186,12 +186,12 @@ a {
 em {
   color: $color-dark-light;
   font-style: normal;
-  font-weight: bolder;
+  font-weight: 700;
 }
 
 strong {
   color: $color-secondary-dark;
-  font-weight: normal;
+  font-weight: 400;
   padding: $padding-small;
 }
 
