--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -3,7 +3,7 @@
   @extend %positioning-root;
 
   a {
-    font-weight: bolder;
+    font-weight: 700;
   }
 
   @media (min-width: $breakpoint-content) {
