--- a/src/css/global-header/_logo.scss
+++ b/src/css/global-header/_logo.scss
@@ -2,7 +2,7 @@
 .logo {
   flex: auto;
   font-size: rem($ratio-text-logo);
-  font-weight: bolder;
+  font-weight: 700;
   line-height: inherit;
   margin-bottom: 0;
   margin-top: 0;
