--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -110,12 +110,12 @@ a {
 
 em {
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 strong {
   color: $stress;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 q::before {
@@ -165,7 +165,7 @@ th {
   border: 1px solid darken($light, 45%);
   color: $dark;
   display: block;
-  font-weight: bold;
+  font-weight: 700;
   max-width: 100%;
   overflow-x: auto;
   padding: ($font-size / 2);
