--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -2,7 +2,7 @@
 .subheading {
   color: $color-dark-light;
   font-size: rem($ratio-text-large);
-  font-weight: bolder;
+  font-weight: 700;
   margin-bottom: $margin-minimal;
   margin-top: $margin-huge;
 }
