--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -20,8 +20,8 @@
 
 // Sections
 body {
-  background-color: $color-light;
-  color: $color-dark;
+  background-color: $color-bg;
+  color: $color-fg;
   margin: 0;
 }
 
@@ -46,7 +46,7 @@ hr {
   border: 0;
   box-sizing: content-box;
   clear: both;
-  color: $color-dark-light;
+  color: $color-fg-light;
   font-size: rem($ratio-text-tiny);
   height: 1em;
   line-height: 1;
@@ -81,7 +81,7 @@ blockquote {
   @extend %white-spaces;
 
   border-left: $width-border-blockquote solid $color-border-blockquote;
-  color: $color-dark-light;
+  color: $color-fg-light;
   padding-left: $padding-left-blockquote;
 
   figure > &,
@@ -124,7 +124,7 @@ dl {
 }
 
 dt {
-  color: $color-dark-light;
+  color: $color-fg-light;
   font-weight: 700;
   margin-bottom: $margin-tiny;
 }
@@ -142,7 +142,7 @@ figure {
 figcaption {
   @extend %protrusion;
 
-  color: $color-dark-light;
+  color: $color-fg-light;
   font-size: rem($ratio-text-small);
   margin-top: $margin-tiny;
 
@@ -184,7 +184,7 @@ a {
 }
 
 em {
-  color: $color-dark-light;
+  color: $color-fg-light;
   font-style: normal;
   font-weight: 700;
 }
@@ -245,7 +245,7 @@ video {
   max-width: 100%;
 
   figure & {
-    background-color: $color-light-light;
+    background-color: $color-bg-light;
     vertical-align: bottom;
   }
 }
