--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -133,27 +133,27 @@ body::after {
 
   &.basic li {
     &:nth-child(1)::before {
-      background-color: $color-dark-dark;
+      background-color: $color-fg-dark;
     }
 
     &:nth-child(2)::before {
-      background-color: $color-dark;
+      background-color: $color-fg;
     }
 
     &:nth-child(3)::before {
-      background-color: $color-dark-light;
+      background-color: $color-fg-light;
     }
 
     &:nth-child(4)::before {
-      background-color: $color-light-dark;
+      background-color: $color-bg-dark;
     }
 
     &:nth-child(5)::before {
-      background-color: $color-light;
+      background-color: $color-bg;
     }
 
     &:nth-child(6)::before {
-      background-color: $color-light-light;
+      background-color: $color-bg-light;
     }
   }
 
