--- a/src/css/global-footer/_footlinks.scss
+++ b/src/css/global-footer/_footlinks.scss
@@ -1,6 +1,6 @@
 // Footlinks
 .footlinks {
-  color: $color-dark-light;
+  color: $color-fg-light;
   margin-bottom: $margin-minimal;
 
   @media (min-width: $breakpoint-content) {
