--- a/src/css/subcontent/_site-search.scss
+++ b/src/css/subcontent/_site-search.scss
@@ -12,10 +12,10 @@
   }
 
   .query {
-    background-color: $color-light-light;
-    border: $width-border-site-search-query solid $color-light-dark;
+    background-color: $color-bg-light;
+    border: $width-border-site-search-query solid $color-bg-dark;
     box-sizing: border-box;
-    color: $color-dark;
+    color: $color-fg;
     padding: 0 $height-site-search-query 0 $padding;
     width: 100%;
 
@@ -33,7 +33,7 @@
     background-size: 50%;
     border: 0;
     box-sizing: border-box;
-    color: $color-light-light;
+    color: $color-bg-light;
     padding: 0 0 0 $height-site-search-query;
     position: absolute;
     right: 0;
