--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,14 +1,14 @@
 // Basic
 $black: rgb(0, 0, 0);
 $white: rgb(255, 255, 255);
-$color-dark: rgb(63, 62, 60);
-$color-light: rgb(250, 249, 247);
+$color-fg: rgb(63, 62, 60);
+$color-bg: rgb(250, 249, 247);
 
-$color-dark-dark: mix($color-dark, $black);
-$color-dark-light: mix($color-dark, $color-light, 80%);
+$color-fg-dark: mix($color-fg, $black);
+$color-fg-light: mix($color-fg, $color-bg, 80%);
 
-$color-light-dark: mix($color-dark, $color-light, 30%);
-$color-light-light: mix($color-light, $white);
+$color-bg-dark: mix($color-fg, $color-bg, 30%);
+$color-bg-light: mix($color-bg, $white);
 
 // Accent
 $color-primary: rgb(33, 117, 180);
@@ -21,6 +21,6 @@ $color-secondary-light: rgb(253, 255, 99);
 $color-secondary-dark: rgb(255, 123, 0);
 
 // Core
-$color-border-blockquote: $color-light-dark;
+$color-border-blockquote: $color-bg-dark;
 
-$color-border-table: $color-light-dark;
+$color-border-table: $color-bg-dark;
