--- a/src/css/widget/_note.scss
+++ b/src/css/widget/_note.scss
@@ -1,6 +1,6 @@
 // Note
 .note {
-  color: $color-dark-light;
+  color: $color-fg-light;
   font-size: rem($ratio-text-small);
   line-height: $line-height-small;
 }
