--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -8,14 +8,14 @@
   $h: rem($line-height-h1 * $r / $ratio-text-h1);
   $m: ($h * 2);
 
-  background-color: $color-light-dark;
+  background-color: $color-bg-dark;
   margin-top: $margin-top-h1;
   padding: $padding-small;
   text-align: center;
 
   a {
     border: $width-border-small solid;
-    color: $color-light;
+    color: $color-bg;
     display: block;
   }
 
