--- a/src/css/content/_subheading.scss
+++ b/src/css/content/_subheading.scss
@@ -1,6 +1,6 @@
 // Subheading
 .subheading {
-  color: $color-dark-light;
+  color: $color-fg-light;
   font-size: rem($ratio-text-large);
   font-weight: 700;
   margin-bottom: $margin-minimal;
