Calculate gap based on content width

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -24,24 +24,16 @@ $padding-large: ($padding * 2);
 $padding-huge: ($padding * 3);
 $padding-gargantuan: ($padding * 4);
 
-// Column
-$column: 34rem;
-$column-gap: rem($line-height);
-
 // Main Component
-$width-gap: $column-gap;
-$width-gap-small: ($width-gap / 2);
-
-$width-blank: ($column / pow($ratio, 3));
-
-$width-content: $column;
+$width-content: 34rem;
+$width-gap: ($width-content / pow($ratio, 6));
+$width-gap-small: ($width-gap / $ratio);
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
-
 $width-supplement: ($width-content-outer / $ratio - $width-gap-small - $width-gap-small);
 $width-supplement-outer: ($width-gap-small + $width-supplement + $width-gap-small);
-
 $width-full: ($width-supplement + $width-gap + $width-content);
 $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
+$width-blank: ($width-content / pow($ratio, 3));
 
 // Breakpoint
 $width-scrollbar: 2rem;
