--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -50,8 +50,8 @@
 // Widget
 @import "widget/fill";
 @import "widget/flat";
-@import "widget/float";
 @import "widget/hang";
+@import "widget/move";
 @import "widget/note";
 @import "widget/pick";
 @import "widget/posts";
