--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -69,11 +69,11 @@ body::after {
   right: 0.5rem;
 
   @media (min-width: $breakpoint-content) {
-    content: "Medium: #{(($breakpoint-content / 1rem) * 16px)}";
+    content: "Medium: #{$breakpoint-content}";
   }
 
   @media (min-width: $breakpoint-full) {
-    content: "Large: #{(($breakpoint-full / 1rem) * 16px)}";
+    content: "Large: #{$breakpoint-full}";
   }
 
   @media print {
