Revert "Define column width with ch unit"
This reverts commit 903dbec481d984d9695c8cb72940cc001401e9bd.

--- a/src/css/var/_size.scss
+++ b/src/css/var/_size.scss
@@ -25,7 +25,7 @@ $padding-huge: ($padding * 3);
 $padding-gargantuan: ($padding * 4);
 
 // Main Component
-$width-content: 64ch;
+$width-content: 34rem;
 $width-gap: ($width-content / pow($ratio, 6));
 $width-gap-small: ($width-gap / $ratio);
 $width-content-outer: ($width-gap-small + $width-content + $width-gap-small);
@@ -36,7 +36,7 @@ $width-full-outer: ($width-gap-small + $width-full + $width-gap-small);
 $width-blank: ($width-content / pow($ratio, 3));
 
 // Breakpoint
-$width-scrollbar: 3ch;
+$width-scrollbar: 2rem;
 $breakpoint-content: (($width-blank + $width-content-outer + $width-blank) * $ratio-text-root-content / $ratio-text-root + $width-scrollbar);
 $breakpoint-full: (($width-blank + $width-full-outer + $width-blank) * $ratio-text-root-full / $ratio-text-root + $width-scrollbar);
 
@@ -45,7 +45,7 @@ $margin-top-h1: $margin-gargantuan;
 
 $padding-left-blockquote: $width-gap;
 $width-border-blockquote: $width-border-large;
-$margin-left-blockquote-content: calc(-#{$padding-left-blockquote} - #{$width-border-blockquote});
+$margin-left-blockquote-content: (- ($padding-left-blockquote + $width-border-blockquote));
 
 $padding-left-list: $indent;
 
