Revert "Fix compilation bug"
This reverts commit cb021eaaf0fedcd7a39d7f2d1a875bf4675c519d.

--- a/src/css/debug.scss
+++ b/src/css/debug.scss
@@ -69,11 +69,11 @@ body::after {
   right: 0.5rem;
 
   @media (min-width: $breakpoint-content) {
-    content: "Medium: #{$breakpoint-content}";
+    content: "Medium: #{(($breakpoint-content / 1rem) * 16px)}";
   }
 
   @media (min-width: $breakpoint-full) {
-    content: "Large: #{$breakpoint-full}";
+    content: "Large: #{(($breakpoint-full / 1rem) * 16px)}";
   }
 
   @media print {
