Remove Pinterest link

--- a/src/html/index.mustache
+++ b/src/html/index.mustache
@@ -36,7 +36,7 @@
       <section class="section">
         <h1>ここ以外だと……</h1>
 
-        <p>ちょっとしたことは<a href="https://twitter.com/hail2u_">Twitter</a>、スマホで撮った写真は<a href="https://instagram.com/hail2u_">Instagram</a>、プログラムとかは<a href="https://github.com/hail2u">GitHub</a>、買ったものやら読んだ本やらは<a href="https://www.pinterest.com/hail2u/">Pinterest</a>、気になったウェブページは<a href="https://pinboard.in/u:hail2u/">Pinboard</a>でやってます。</p>
+        <p>ちょっとしたことは<a href="https://twitter.com/hail2u_">Twitter</a>、スマホで撮った写真は<a href="https://instagram.com/hail2u_">Instagram</a>、プログラムとかは<a href="https://github.com/hail2u">GitHub</a>、買ったものやら読んだ本やら気になったウェブページなどは<a href="https://pinboard.in/u:hail2u/">Pinboard</a>でやってます。</p>
       </section>
     </main>
 
