Darken visited link text

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -181,6 +181,10 @@ a {
   color: $color-primary;
   -webkit-text-decoration-skip: ink;
   text-decoration-skip: ink;
+
+  &:visited {
+    color: $color-primary-dark;
+  }
 }
 
 em {
