--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -14,11 +14,11 @@ $color-bg-light: mix($color-bg, $white);
 $color-primary: rgb(33, 117, 180);
 $color-secondary: rgb(251, 254, 0);
 
-$color-primary-dark: rgb(7, 71, 121);
-$color-primary-light: rgb(105, 165, 211);
+$color-primary-dark: darken($color-primary, 20%);
+$color-primary-light: lighten($color-primary, 20%);
 
-$color-secondary-light: rgb(253, 255, 99);
-$color-secondary-dark: rgb(255, 123, 0);
+$color-secondary-dark: adjust-hue($color-secondary, -30deg);
+$color-secondary-light: lighten($color-secondary, 30%);
 
 // Core
 $color-border-blockquote: $color-bg-dark;
