--- a/src/css/widget/_pick.scss
+++ b/src/css/widget/_pick.scss
@@ -8,7 +8,7 @@
   $h: rem($line-height-h1 * $r / $ratio-text-h1);
   $m: ($h * 2);
 
-  background-color: $color-bg-dark;
+  background-color: $color-primary-light;
   margin-top: $margin-top-h1;
   padding: $padding-small;
   text-align: center;
