Generate color variation via lightness

--- a/src/css/var/_color.scss
+++ b/src/css/var/_color.scss
@@ -1,14 +1,12 @@
 // Basic
-$black: rgb(0, 0, 0);
-$white: rgb(255, 255, 255);
 $color-fg: rgb(63, 62, 60);
 $color-bg: rgb(250, 249, 247);
 
-$color-fg-dark: mix($color-fg, $black);
-$color-fg-light: mix($color-fg, $color-bg, 80%);
+$color-fg-dark: darken($color-fg, 10%);
+$color-fg-light: lighten($color-fg, 25%);
 
-$color-bg-dark: mix($color-fg, $color-bg, 30%);
-$color-bg-light: mix($color-bg, $white);
+$color-bg-dark: darken($color-bg, 20%);
+$color-bg-light: lighten($color-bg, 2%);
 
 // Accent
 $color-primary: rgb(33, 117, 180);
