--- a/src/css/natural.scss
+++ b/src/css/natural.scss
@@ -9,16 +9,16 @@ $dark: #333;
 $light: #fcfcfc;
 $link: #01e;
 $stress: #c33;
-$font-size: 1em;
-$sans-serif: "Helvetica Neue", "Calibri", sans-serif;
-$monospace: "Menlo", "Consolas", monospace;
+$font-size: 1.125em;
 $width: 45em;
 
 // Sections
 body {
   background-color: $light;
   color: $dark;
-  font: #{$font-size}/1.75 $sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+  font-size: $font-size;
+  line-height: 1.75;
   margin: $font-size;
   max-width: $width;
 
@@ -65,7 +65,9 @@ hr {
 
 pre {
   background-color: darken($light, 3%);
-  font: #{($font-size * 0.875)}/1.25 $monospace;
+  font-family: "Menlo", "Consolas", monospace;
+  font-size: ($font-size * 0.875);
+  line-height: 1.25;
   margin: ($font-size * 2) 0 0;
   overflow-wrap: break-word;
   padding: $font-size;
@@ -126,8 +128,7 @@ q::after {
   content: "\0020\201D";
 }
 
-abbr,
-acronym {
+abbr {
   border-bottom: 1px dotted $dark;
   cursor: help;
 }
@@ -135,12 +136,11 @@ acronym {
 code,
 var,
 samp {
-  font-family: $monospace;
+  font-family: "Menlo", "Consolas", monospace;
 }
 
 // Edits
 ins {
-  border-bottom: 3px double lighten($dark, 15%);
   text-decoration: none;
 }
 
@@ -217,12 +217,6 @@ td {
   }
 }
 
-@media (min-width: ($font-size * 52)) {
-  body {
-    margin-top: $font-size;
-  }
-}
-
 $indent: 10em;
 $breakpoint: ($font-size + $indent + $width + $font-size);
 
@@ -241,13 +235,11 @@ $breakpoint: ($font-size + $indent + $width + $font-size);
 // Print
 @media print {
   * {
-    // scss-lint:disable all
     background-color: transparent !important;
     background-image: none !important;
     box-shadow: none !important;
     color: #000 !important;
     text-shadow: none !important;
-    // scss-lint:enable all
   }
 
   body {
