Break inside words for code

--- a/src/css/_core.scss
+++ b/src/css/_core.scss
@@ -214,6 +214,7 @@ kbd {
   font-family: $font-stack-monospace;
   font-feature-settings: "zero" 1;
   font-size: 1em;
+  word-break: break-all;
 
   p &::before,
   p &::after {
